# .config

./: AGENT_INSTRUCTIONS.md  CHANGELOG.rst  CONTRIBUTING.md  GEMINI.md  GEMINI.src.md  README.rst  STANDARDS.md  install.sh  pyproject.toml  pyproject.toml_
src/geometor/config/: __init__.py  app.py
